# WorldVPN

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  flutter_rust_bridge.yaml
backend/server/: Cargo.toml  README.md  SECURITY.md
backend/server/migrations/: 20240101000000_init.sql  20260206120000_credit_transactions.sql  20260206130000_nodes.sql  20260206151500_dual_network.sql
backend/server/src/: auth.rs  main.rs  state.rs
backend/server/src/api/: auth.rs  credits.rs  health.rs  mod.rs  nodes.rs  transparency.rs  vpn.rs
backend/server/src/services/: mod.rs  vpngate.rs
crates/vpn-core/: Cargo.toml  compile_errors.txt
crates/vpn-core/src/: abuse.rs  binary_manager.rs  client.rs  credits.rs  crypto.rs  error.rs  frb_generated.rs  hysteria.rs  ikev2.rs  lib.rs  mock.rs  nat.rs  obfuscation.rs  openvpn.rs  p2p.rs  protocol.rs  selector.rs  shadowsocks.rs  tunnel.rs  v2ray.rs  wireguard.rs
crates/vpn-core/src/api/: simple.rs
crates/vpn-core/src/tunnel/: mod.rs  windows.rs
crates/vpn-ffi/: Cargo.toml
crates/vpn-ffi/src/: lib.rs
crates/vpn-wasm/: Cargo.toml
crates/vpn-wasm/src/: lib.rs
frontend/cli/: Cargo.toml
frontend/cli/src/: main.rs
frontend/worldvpn-extension/public/: manifest.json
frontend/worldvpn-gui/: MOBILE.md  MOBILE_TODO.md  TODO.md  package-lock.json  package.json  tailwind.config.js
frontend/worldvpn-gui/src/: App.css  App.tsx
frontend/worldvpn-gui/src-tauri/: Cargo.toml  tauri.conf.json
frontend/worldvpn-gui/src-tauri/src/: lib.rs  main.rs
frontend/worldvpn-mobile/: README.md  pubspec.yaml
frontend/worldvpn-mobile/android/: gradle.properties
frontend/worldvpn-mobile/android/app/: build.gradle
frontend/worldvpn-mobile/android/app/src/main/: AndroidManifest.xml
frontend/worldvpn-mobile/android/app/src/main/kotlin/com/aurel/worldvpn/worldvpn_mobile/: MainActivity.kt
frontend/worldvpn-mobile/ios/Runner/: Info.plist
frontend/worldvpn-mobile/ios/Runner.xcodeproj/: project.pbxproj
frontend/worldvpn-mobile/lib/: main.dart
frontend/worldvpn-mobile/lib/rust_gen/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
frontend/worldvpn-mobile/lib/rust_gen/api/: simple.dart
frontend/worldvpn-mobile/lib/store/: settings_provider.dart  vpn_provider.dart
frontend/worldvpn-mobile/lib/ui/: router.dart
frontend/worldvpn-mobile/lib/ui/layout/: scaffold_with_nav.dart
frontend/worldvpn-mobile/lib/ui/screens/: home_screen.dart  login_screen.dart  map_screen.dart  profile_screen.dart  settings_screen.dart  wallet_screen.dart
frontend/worldvpn-mobile/lib/ui/widgets/: glass_bottom_nav.dart
frontend/worldvpn-mobile/linux/: CMakeLists.txt  my_application.cc
frontend/worldvpn-mobile/macos/Runner.xcodeproj/: project.pbxproj
frontend/worldvpn-mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/worldvpn-mobile/macos/Runner/Configs/: AppInfo.xcconfig
frontend/worldvpn-mobile/test/: widget_test.dart
frontend/worldvpn-mobile/web/: index.html  manifest.json
frontend/worldvpn-mobile/windows/: CMakeLists.txt
frontend/worldvpn-mobile/windows/runner/: Runner.rc  main.cpp
scripts/: build-remote.sh  generate-dev-certs.sh
