[package]
name = "vpn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
vpn-core = { path = "../../crates/vpn-core" }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
rand = "0.8"
argon2 = "0.5"
password-hash = "0.5"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
csv = "1.3"

[dev-dependencies]
