[package]
name = "worldvpn-gui"
version = "0.1.0"
description = "WorldVPN Desktop Client"
authors = ["WorldVPN Team"]
edition = "2021"

[lib]
name = "worldvpn_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Local core library
vpn-core = { path = "../../../crates/vpn-core" }

rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
